--- a/kanji.html
+++ b/kanji.html
@@ -92,6 +92,111 @@
 ["十一月", "juu-ichi-gatsu"],
 ["十二月", "juu-ni-gatsu"],
 ["人体", "jin-tai"],
+      ["肩", "kata"],
+["喉", "nodo"],
+["顔", "kao"],
+["頬", "hoho"],
+["歯", "ha"],
+["指", "yubi"],
+["胃", "i"],
+["爪", "tsume"],
+["額", "hitai"],
+["顎", "ago"],
+["鼻", "hana"],
+["口", "kuchi"],
+["唇", "kuchibiru"],
+["首", "kubi"],
+["掌", "tenohira"],
+["体", "karada"],
+["頭", "atama"],
+["手", "te"],
+["足", "ashi"],
+["腕", "ude"],
+["膝", "hiza"],
+["髪", "kami"],
+["背中", "senaka"],
+["腰", "koshi"],
+["目", "me"],
+["耳", "mimi"],
+["踵", "kakato"],
+["足指", "ashi-yubi"],
+["親指", "oya-yubi"],
+["人差し指", "hito-sashi-yubi"],
+["中指", "naka-yubi"],
+["薬指", "kusuri-yubi"],
+["小指", "ko-yubi"],
+["顎鬚", "ago-hige"],
+["髭", "hige"],
+["太股", "futomomo"],
+["皮膚", "hifu"],
+["血液", "ketsu-eki"],
+["血", "chi"],
+["眉", "mayu"],
+["胸", "mune"],
+["肘", "hiji"],
+["臍", "heso"],
+["脇の下", "wakinoshita"],
+["手首", "te-kubi"],
+["足首", "ashi-kubi"],
+["眼球", "gan-kyuu"],
+["内臓", "nai-zou"],
+["腎臓", "jin-zou"],
+["肝臓", "kan-zou"],
+["肋骨", "ro-kkotsu"],
+["卵巣", "ran-sou"],
+["胎児", "tai-ji"],
+["心臓", "shin-zou"],
+["脾臓", "hi-zou"],
+["脳", "nou"],
+["筋肉", "kin-niku"],
+["肺", "hai"],
+["血管", "ke-kkan"],
+["動脈", "dou-myaku"],
+["静脈", "jou-myaku"],
+["子宮", "shi-kyuu"],
+["網膜", "mou-maku"],
+["精子", "sei-shi"],
+["臍の緒", "heso-no-o"],
+["頭蓋骨", "zugai-kotsu"],
+["骨", "hone"],
+["腸", "chou"],
+["大腸", "dai-chou"],
+["鋏", "hasami"],
+["電卓", "den-taku"],
+["チョーク", "chooku"],
+["椅子", "isu"],
+["コンピュータ", "konpyuuta"],
+["辞書", "jisho"],
+["紙", "kami"],
+["机", "tsukue"],
+["教卓", "kyou-taku"],
+["黒板", "koku-ban"],
+["定規", "jougi"],
+["黒板消し", "kokuban-keshi"],
+["鉛筆", "en-pitsu"],
+["シャープペン", "shaapupen"],
+["地図", "chizu"],
+["ペン", "pen"],
+["本棚", "hon-dana"],
+["鉛筆削り", "enpitsu-kezuri"],
+["制服", "sei-fuku"],
+["ホッチキス", "hocchikisu"],
+["マーカー", "maakaa"],
+["通学鞄", "tsuugaku-kaban"],
+["筆箱", "fude-bako"],
+["ボールペン", "boorupen"],
+["分度器", "bun-doki"],
+["教科書", "kyou-kasho"],
+["百科事典", "hyakka-jiten"],
+["包丁", "houchou"],
+["まな板", "manaita"],
+["浄水器", "jou-sui-ki"],
+["鍋", "nabe"],
+["フライパン", "furaipan"],
+["やかん", "yakan"],
+["おたま", "otama"],
+["排水溝", "haisui-kou"],
+["ボウル", "bouru"],
     ];
 
     let questions = [];
