--- a/kosakata.html
+++ b/kosakata.html
@@ -134,6 +134,7 @@
       ["karai", "pedas"],["suppai", "asam"],["shiokarai", "asin"],["nigai", "pahit"],["koi", "pekat"],["usui", "tipis,encer(rasa)"],["oishii", "enak"],["mazui", "tidak enak"],["samui", "dingin(suhu)"],
       ["atatakai", "hangat(suhu)"],["suzushii", "sejuk(suhu)"],["mushiatsui", "panas gerah"],["akarui", "terang,riang"],["kurai", "gelap,suram"],["kitanai", "kotor"],["omoi", "berat"],["karui", "ringan"],
       ["kuwashii", "detail"],["muzukashii", "sulit"],["yasashii", "mudah"],["mezurashii", "langka"],["okashii", "aneh,lucu"],["abunai", "berbahaya"],["umai", "enak,pandai"],["ii", "bagus"],["warui", "jelek"],
+      ["hidoi", "kejam"],["urusai", "berisik"],["isogashii", "sibuk"],["tadashii", "benar"],["sugoi", "hebat"],["subarashii", "luar biasa"],["kakkoi", "keren,terlihat bagus"],["erai", "pintar,hebat,bagus"],
       
     ];
      let questions = [], current = 0, score = 0;
