--- a/kotoba.html
+++ b/kotoba.html
@@ -278,6 +278,15 @@
       ["かれ", "dia(laki-laki)"],
       ["かのじょ", "dia(perempuan)"],
       ["かぞく", "keluarga"],
+      ["ひとりで", "sendiri,seorang diri"],
+      ["せんしゅう", "minggu lalu"],
+      ["らいしゅう", "minggu depan"],
+      ["せんげつ", "bulan lalu"],
+      ["こんげつ", "bulan ini"],
+      ["らいげつ", "bulan depan"],
+      ["きょねん", "tahun lalu"],
+      ["ことし", "tahun ini"],
+      ["らいねん", "tahun depan"],
     ];
 
     let questions = [];
