--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -146,6 +146,16 @@
       ["うるさい", "berisik,mengganggu"],
       ["うわぎ", "jaket"],
       ["え", "gambar"],
+      ["えいが", "film"],
+      ["えいがかん", "bioskop"],
+      ["えいご", "bahasa inggris"],
+      ["ええ", "iya nih"],
+      ["えき", "stasiun"],
+      ["エレベーター", "lift"],
+      ["えんぴつ", "pensil"],
+      ["おいしい", "lezat"],
+      ["おおい", "banyak"],
+      ["おおきい", "besar"],
     ];
 
     let questions = [];
