--- a/artikanji.html
+++ b/artikanji.html
@@ -61,117 +61,117 @@
   </div>
   <script>
     const data = [
-      ["日", "Matahari"],
-["月", "Bulan"],
-["木", "Pohon"],
-["山", "Gunung"],
-["川", "Sungai"],
-["田", "Sawah"],
-["人", "Manusia"],
-["口", "Mulut"],
-["車", "Kendaraan"],
-["門", "Gerbang"],
-["火", "Api"],
-["水", "Air"],
-["室", "Kamar"],
-["家", "Rumah"],
-["度", "Derajat"],
-["竹", "Bambu"],
-["貝", "Kerang"],
-["花", "Bunga"],
-["茶", "Teh"],
-["肉", "Daging"],
-["文", "Kalimat"],
-["字", "Huruf"],
-["物", "Benda"],
-["牛", "Sapi"],
-["鳥", "Burung"],
-["魚", "Ikan"],
-["明", "Terang"],
-["休", "Beristirahat"],
-["体", "Tubuh"],
-["好", "Suka"],
-["男", "Pria"],
-["林", "Hutan"],
-["森", "Hutan"],
-["朝", "Pagi"],
-["昼", "Siang"],
-["夜", "Malam"],
-["晩", "Malam"],
-["夕", "Malam"],
-["方", "Arah"],
-["午", "Tengah Hari"],
-["前", "Di Hadapan"],
-["後", "Setelah"],
-["毎", "Setiap"],
-["週", "Minggu"],
-["曜", "Hari Kerja"],
-["今", "Sekarang"],
-["年", "Tahun"],
-["間", "Ruang"],
-["一", "Satu"],
-["二", "Dua"],
-["三", "Tiga"],
-["四", "Empat"],
-["五", "Lima"],
-["六", "Enam"],
-["七", "Tujuh"],
-["八", "Delapan"],
-["九", "Sembilan"],
-["十", "Sepuluh"],
-["千", "Ribu"],
-["万", "Sepuluh Ribu"],
-["百", "Ratus"],
-["円", "Lingkaran"],
-["新", "Baru"],
-["古", "Tua"],
-["長", "Panjang"],
-["短", "Pendek"],
-["高", "Tinggi"],
-["安", "Aman"],
-["低", "Rendah"],
-["暗", "Gelap"],
-["多", "Banyak"],
-["少", "Sedikit"],
-["金", "Emas"],
-["土", "Tanah"],
-["子", "Anak"],
-["女", "Wanita"],
-["学", "Belajar"],
-["生", "Hidup"],
-["先", "Sebelumnya"],
-["私", "Pribadi"],
-["上", "Di atas, Ke atas"],
-["下", "Bawah"],
-["中", "Tengah"],
-["大", "Besar"],
-["英", "Hebat"],
-["会", "Rapat"],
-["首", "Leher"],
-["行", "Pergi"],
-["来", "Datang"],
-["帰", "Kembali"],
-["食", "Makan"],
-["飲", "Minum"],
-["見", "Lihat"],
-["聞", "Mendengar"],
-["読", "Membaca"],
-["書", "Menulis"],
-["話", "Cerita"],
-["買", "Membeli"],
-["教", "Mendidik"],
-["小", "Kecil"],
-["本", "Buku"],
-["半", "Setengah"],
-["分", "Bagian"],
-["力", "Kekuasaan"],
-["何", "Apa"],
-["目", "Mata"],
-["耳", "Telinga"],
-["手", "Tangan"],
-["足", "Kaki"],
-["雨", "Hujan"],
-["米", "Beras"],
+      ["日<br>nichi", "Matahari"],
+["月<br>getsu", "Bulan"],
+["木<br>ki", "Pohon"],
+["山<br>yama", "Gunung"],
+["川<br>kawa", "Sungai"],
+["田<br>ta", "Sawah"],
+["人<br>hito", "Manusia"],
+["口<br>kuchi", "Mulut"],
+["車<br>kuruma", "Kendaraan"],
+["門<br>mon", "Gerbang"],
+["火<br>hi", "Api"],
+["水<br>mizu", "Air"],
+["室<br>shitsu", "Kamar"],
+["家<br>ie", "Rumah"],
+["度<br>do", "Derajat"],
+["竹<br>take", "Bambu"],
+["貝<br>kai", "Kerang"],
+["花<br>hana", "Bunga"],
+["茶<br>cha", "Teh"],
+["肉<br>niku", "Daging"],
+["文<br>bun", "Kalimat"],
+["字<br>ji", "Huruf"],
+["物<br>mono", "Benda"],
+["牛<br>ushi", "Sapi"],
+["鳥<br>tori", "Burung"],
+["魚<br>sakana", "Ikan"],
+["明<br>aka", "Terang"],
+["休<br>yasu", "Beristirahat"],
+["体<br>karada", "Tubuh"],
+["好<br>suki", "Suka"],
+["男<br>otoko", "Pria"],
+["林<br>hayashi", "Hutan"],
+["森<br>mori", "Hutan"],
+["朝<br>asa", "Pagi"],
+["昼<br>hiru", "Siang"],
+["夜<br>yoru", "Malam"],
+["晩<br>ban", "Malam"],
+["夕<br>yuu", "Malam"],
+["方<br>hou", "Arah"],
+["午<br>go", "Tengah Hari"],
+["前<br>mae", "Di Hadapan"],
+["後<br>ato", "Setelah"],
+["毎<br>mai", "Setiap"],
+["週<br>shuu", "Minggu"],
+["曜<br>you", "Hari Kerja"],
+["今<br>ima", "Sekarang"],
+["年<br>toshi", "Tahun"],
+["間<br>aida", "Ruang"],
+["一<br>ichi", "Satu"],
+["二<br>ni", "Dua"],
+["三<br>san", "Tiga"],
+["四<br>yon", "Empat"],
+["五<br>go", "Lima"],
+["六<br>roku", "Enam"],
+["七<br>nana", "Tujuh"],
+["八<br>hachi", "Delapan"],
+["九<br>kyuu", "Sembilan"],
+["十<br>juu", "Sepuluh"],
+["千<br>sen", "Ribu"],
+["万<br>man", "Sepuluh Ribu"],
+["百<br>hyaku", "Ratus"],
+["円<br>en", "Lingkaran"],
+["新<br>shin", "Baru"],
+["古<br>furui", "Tua"],
+["長<br>nagai", "Panjang"],
+["短<br>mijikai", "Pendek"],
+["高<br>takai", "Tinggi"],
+["安<br>yasu", "Aman"],
+["低<br>hikui", "Rendah"],
+["暗<br>kurai", "Gelap"],
+["多<br>ooi", "Banyak"],
+["少<br>sukunai", "Sedikit"],
+["金<br>kane", "Emas"],
+["土<br>tsuchi", "Tanah"],
+["子<br>ko", "Anak"],
+["女<br>onna", "Wanita"],
+["学<br>gaku", "Belajar"],
+["生<br>sei", "Hidup"],
+["先<br>saki", "Sebelumnya"],
+["私<br>watashi", "Pribadi"],
+["上<br>ue", "Di atas, Ke atas"],
+["下<br>shita", "Bawah"],
+["中<br>naka", "Tengah"],
+["大<br>ookii", "Besar"],
+["英<br>ei", "Hebat"],
+["会<br>kai", "Rapat"],
+["首<br>kubi", "Leher"],
+["行<br>iku", "Pergi"],
+["来<br>kuru", "Datang"],
+["帰<br>kaeru", "Kembali"],
+["食<br>taberu", "Makan"],
+["飲<br>nomu", "Minum"],
+["見<br>miru", "Lihat"],
+["聞<br>kiku", "Mendengar"],
+["読<br>yomu", "Membaca"],
+["書<br>kaku", "Menulis"],
+["話<br>hanasu", "Cerita"],
+["買<br>kau", "Membeli"],
+["教<br>oshieru", "Mendidik"],
+["小<br>chiisai", "Kecil"],
+["本<br>hon", "Buku"],
+["半<br>han", "Setengah"],
+["分<br>bun", "Bagian"],
+["力<br>chikara", "Kekuasaan"],
+["何<br>nani", "Apa"],
+["目<br>me", "Mata"],
+["耳<br>mimi", "Telinga"],
+["手<br>te", "Tangan"],
+["足<br>ashi", "Kaki"],
+["雨<br>ame", "Hujan"],
+["米<br>kome", "Beras"],
     ];
 
     let questions = [];
