--- a/artikanji.html
+++ b/artikanji.html
@@ -159,19 +159,117 @@
 ["書\nkaku", "Menulis"],
 ["話\nhanasu", "Cerita"],
 ["買\nkau", "Membeli"],
-["教\noshieru", "Mendidik"],
-["小\nchiisai", "Kecil"],
-["本\nhon", "Buku"],
-["半\nhan", "Setengah"],
-["分\nbun", "Bagian"],
-["力\nchikara", "Kekuasaan"],
-["何\nnani", "Apa"],
-["目\nme", "Mata"],
-["耳\nmimi", "Telinga"],
-["手\nte", "Tangan"],
-["足\nashi", "Kaki"],
-["雨\name", "Hujan"],
-["米\nkome", "Beras"],
+["日<br>hi", "Matahari"],
+["月<br>tsuki", "Bulan"],
+["木<br>ki", "Pohon"],
+["山<br>yama", "Gunung"],
+["川<br>kawa", "Sungai"],
+["田<br>ta", "Sawah"],
+["人<br>hito", "Manusia"],
+["口<br>kuchi", "Mulut"],
+["車<br>kuruma", "Kendaraan"],
+["門<br>mon", "Gerbang"],
+["火<br>hi", "Api"],
+["水<br>mizu", "Air"],
+["室<br>shitsu", "Kamar"],
+["家<br>ie", "Rumah"],
+["度<br>do", "Derajat"],
+["竹<br>take", "Bambu"],
+["貝<br>kai", "Kerang"],
+["花<br>hana", "Bunga"],
+["茶<br>cha", "Teh"],
+["肉<br>niku", "Daging"],
+["文<br>bun", "Kalimat"],
+["字<br>ji", "Huruf"],
+["物<br>mono", "Benda"],
+["牛<br>ushi", "Sapi"],
+["鳥<br>tori", "Burung"],
+["魚<br>sakana", "Ikan"],
+["明<br>aka", "Terang"],
+["休<br>yasumu", "Beristirahat"],
+["体<br>karada", "Tubuh"],
+["好<br>suki", "Suka"],
+["男<br>otoko", "Pria"],
+["林<br>hayashi", "Hutan"],
+["森<br>mori", "Hutan"],
+["朝<br>asa", "Pagi"],
+["昼<br>hiru", "Siang"],
+["夜<br>yoru", "Malam"],
+["晩<br>ban", "Malam"],
+["夕<br>yū", "Malam"],
+["方<br>kata", "Arah"],
+["午<br>go", "Tengah Hari"],
+["前<br>mae", "Di Hadapan"],
+["後<br>ato", "Setelah"],
+["毎<br>mai", "Setiap"],
+["週<br>shū", "Minggu"],
+["曜<br>yō", "Hari Kerja"],
+["今<br>ima", "Sekarang"],
+["年<br>toshi", "Tahun"],
+["間<br>aida", "Ruang"],
+["一<br>ichi", "Satu"],
+["二<br>ni", "Dua"],
+["三<br>san", "Tiga"],
+["四<br>yon", "Empat"],
+["五<br>go", "Lima"],
+["六<br>roku", "Enam"],
+["七<br>nana", "Tujuh"],
+["八<br>hachi", "Delapan"],
+["九<br>kyū", "Sembilan"],
+["十<br>jū", "Sepuluh"],
+["千<br>sen", "Ribu"],
+["万<br>man", "Sepuluh Ribu"],
+["百<br>hyaku", "Ratus"],
+["円<br>en", "Lingkaran"],
+["新<br>atarashii", "Baru"],
+["古<br>furui", "Tua"],
+["長<br>nagai", "Panjang"],
+["短<br>mijikai", "Pendek"],
+["高<br>takai", "Tinggi"],
+["安<br>yasui", "Aman"],
+["低<br>hikui", "Rendah"],
+["暗<br>kurai", "Gelap"],
+["多<br>ōi", "Banyak"],
+["少<br>sukunai", "Sedikit"],
+["金<br>kane", "Emas"],
+["土<br>tsuchi", "Tanah"],
+["子<br>ko", "Anak"],
+["女<br>onna", "Wanita"],
+["学<br>gaku", "Belajar"],
+["生<br>sei", "Hidup"],
+["先<br>saki", "Sebelumnya"],
+["私<br>watashi", "Pribadi"],
+["上<br>ue", "Di atas, Ke atas"],
+["下<br>shita", "Bawah"],
+["中<br>naka", "Tengah"],
+["大<br>ō", "Besar"],
+["英<br>ei", "Hebat"],
+["会<br>kai", "Rapat"],
+["首<br>kubi", "Leher"],
+["行<br>iku", "Pergi"],
+["来<br>kuru", "Datang"],
+["帰<br>kaeru", "Kembali"],
+["食<br>taberu", "Makan"],
+["飲<br>nomu", "Minum"],
+["見<br>miru", "Lihat"],
+["聞<br>kiku", "Mendengar"],
+["読<br>yomu", "Membaca"],
+["書<br>kaku", "Menulis"],
+["話<br>hanasu", "Cerita"],
+["買<br>kau", "Membeli"],
+["教<br>oshieru", "Mendidik"],
+["小<br>chiisai", "Kecil"],
+["本<br>hon", "Buku"],
+["半<br>han", "Setengah"],
+["分<br>bun", "Bagian"],
+["力<br>chikara", "Kekuasaan"],
+["何<br>nani", "Apa"],
+["目<br>me", "Mata"],
+["耳<br>mimi", "Telinga"],
+["手<br>te", "Tangan"],
+["足<br>ashi", "Kaki"],
+["雨<br>ame", "Hujan"],
+["米<br>kome", "Beras"],
     ];
 
     let questions = [];
