--- a/artikanji.html
+++ b/artikanji.html
@@ -25,6 +25,8 @@
     #question {
       font-size: 2rem;
       margin-bottom: 1rem;
+      line-height: 1.4;
+      white-space: pre-line;
     }
     #options button {
       display: block;
@@ -59,217 +61,120 @@
     <div id="finalScore"></div>
     <button id="restartBtn">Mulai Ulang</button>
   </div>
+
   <script>
     const data = [
-      ["日\nnichi", "Matahari"],
-["月\ngetsu", "Bulan"],
-["木\nki", "Pohon"],
-["山\nyama", "Gunung"],
-["川\nkawa", "Sungai"],
-["田\nta", "Sawah"],
-["人\nhito", "Manusia"],
-["口\nkuchi", "Mulut"],
-["車\nkuruma", "Kendaraan"],
-["門\nmon", "Gerbang"],
-["火\nhi", "Api"],
-["水\nmizu", "Air"],
-["室\nshitsu", "Kamar"],
-["家\nie", "Rumah"],
-["度\ndo", "Derajat"],
-["竹\ntake", "Bambu"],
-["貝\nkai", "Kerang"],
-["花\nhana", "Bunga"],
-["茶\ncha", "Teh"],
-["肉\nniku", "Daging"],
-["文\nbun", "Kalimat"],
-["字\nji", "Huruf"],
-["物\nmono", "Benda"],
-["牛\nushi", "Sapi"],
-["鳥\ntori", "Burung"],
-["魚\nsakana", "Ikan"],
-["明\naka", "Terang"],
-["休\nyasu", "Beristirahat"],
-["体\nkarada", "Tubuh"],
-["好\nsuki", "Suka"],
-["男\notoko", "Pria"],
-["林\nhayashi", "Hutan"],
-["森\nmori", "Hutan"],
-["朝\nasa", "Pagi"],
-["昼\nhiru", "Siang"],
-["夜\nyoru", "Malam"],
-["晩\nban", "Malam"],
-["夕\nyuu", "Malam"],
-["方\nhou", "Arah"],
-["午\ngo", "Tengah Hari"],
-["前\nmae", "Di Hadapan"],
-["後\nato", "Setelah"],
-["毎\nmai", "Setiap"],
-["週\nshuu", "Minggu"],
-["曜\nyou", "Hari Kerja"],
-["今\nima", "Sekarang"],
-["年\ntoshi", "Tahun"],
-["間\naida", "Ruang"],
-["一\nichi", "Satu"],
-["二\nni", "Dua"],
-["三\nsan", "Tiga"],
-["四\nyon", "Empat"],
-["五\ngo", "Lima"],
-["六\nroku", "Enam"],
-["七\nnana", "Tujuh"],
-["八\nhachi", "Delapan"],
-["九\nkyuu", "Sembilan"],
-["十\njuu", "Sepuluh"],
-["千\nsen", "Ribu"],
-["万\nman", "Sepuluh Ribu"],
-["百\nhyaku", "Ratus"],
-["円\nen", "Lingkaran"],
-["新\nshin", "Baru"],
-["古\nfurui", "Tua"],
-["長\nnagai", "Panjang"],
-["短\nmijikai", "Pendek"],
-["高\ntakai", "Tinggi"],
-["安\nyasu", "Aman"],
-["低\nhikui", "Rendah"],
-["暗\nkurai", "Gelap"],
-["多\nooi", "Banyak"],
-["少\nsukunai", "Sedikit"],
-["金\nkane", "Emas"],
-["土\ntsuchi", "Tanah"],
-["子\nko", "Anak"],
-["女\nonna", "Wanita"],
-["学\ngaku", "Belajar"],
-["生\nsei", "Hidup"],
-["先\nsaki", "Sebelumnya"],
-["私\nwatashi", "Pribadi"],
-["上\nue", "Di atas, Ke atas"],
-["下\nshita", "Bawah"],
-["中\nnaka", "Tengah"],
-["大\nookii", "Besar"],
-["英\nei", "Hebat"],
-["会\nkai", "Rapat"],
-["首\nkubi", "Leher"],
-["行\niku", "Pergi"],
-["来\nkuru", "Datang"],
-["帰\nkaeru", "Kembali"],
-["食\ntaberu", "Makan"],
-["飲\nnomu", "Minum"],
-["見\nmiru", "Lihat"],
-["聞\nkiku", "Mendengar"],
-["読\nyomu", "Membaca"],
-["書\nkaku", "Menulis"],
-["話\nhanasu", "Cerita"],
-["買\nkau", "Membeli"],
-["日<br>hi", "Matahari"],
-["月<br>tsuki", "Bulan"],
-["木<br>ki", "Pohon"],
-["山<br>yama", "Gunung"],
-["川<br>kawa", "Sungai"],
-["田<br>ta", "Sawah"],
-["人<br>hito", "Manusia"],
-["口<br>kuchi", "Mulut"],
-["車<br>kuruma", "Kendaraan"],
-["門<br>mon", "Gerbang"],
-["火<br>hi", "Api"],
-["水<br>mizu", "Air"],
-["室<br>shitsu", "Kamar"],
-["家<br>ie", "Rumah"],
-["度<br>do", "Derajat"],
-["竹<br>take", "Bambu"],
-["貝<br>kai", "Kerang"],
-["花<br>hana", "Bunga"],
-["茶<br>cha", "Teh"],
-["肉<br>niku", "Daging"],
-["文<br>bun", "Kalimat"],
-["字<br>ji", "Huruf"],
-["物<br>mono", "Benda"],
-["牛<br>ushi", "Sapi"],
-["鳥<br>tori", "Burung"],
-["魚<br>sakana", "Ikan"],
-["明<br>aka", "Terang"],
-["休<br>yasumu", "Beristirahat"],
-["体<br>karada", "Tubuh"],
-["好<br>suki", "Suka"],
-["男<br>otoko", "Pria"],
-["林<br>hayashi", "Hutan"],
-["森<br>mori", "Hutan"],
-["朝<br>asa", "Pagi"],
-["昼<br>hiru", "Siang"],
-["夜<br>yoru", "Malam"],
-["晩<br>ban", "Malam"],
-["夕<br>yū", "Malam"],
-["方<br>kata", "Arah"],
-["午<br>go", "Tengah Hari"],
-["前<br>mae", "Di Hadapan"],
-["後<br>ato", "Setelah"],
-["毎<br>mai", "Setiap"],
-["週<br>shū", "Minggu"],
-["曜<br>yō", "Hari Kerja"],
-["今<br>ima", "Sekarang"],
-["年<br>toshi", "Tahun"],
-["間<br>aida", "Ruang"],
-["一<br>ichi", "Satu"],
-["二<br>ni", "Dua"],
-["三<br>san", "Tiga"],
-["四<br>yon", "Empat"],
-["五<br>go", "Lima"],
-["六<br>roku", "Enam"],
-["七<br>nana", "Tujuh"],
-["八<br>hachi", "Delapan"],
-["九<br>kyū", "Sembilan"],
-["十<br>jū", "Sepuluh"],
-["千<br>sen", "Ribu"],
-["万<br>man", "Sepuluh Ribu"],
-["百<br>hyaku", "Ratus"],
-["円<br>en", "Lingkaran"],
-["新<br>atarashii", "Baru"],
-["古<br>furui", "Tua"],
-["長<br>nagai", "Panjang"],
-["短<br>mijikai", "Pendek"],
-["高<br>takai", "Tinggi"],
-["安<br>yasui", "Aman"],
-["低<br>hikui", "Rendah"],
-["暗<br>kurai", "Gelap"],
-["多<br>ōi", "Banyak"],
-["少<br>sukunai", "Sedikit"],
-["金<br>kane", "Emas"],
-["土<br>tsuchi", "Tanah"],
-["子<br>ko", "Anak"],
-["女<br>onna", "Wanita"],
-["学<br>gaku", "Belajar"],
-["生<br>sei", "Hidup"],
-["先<br>saki", "Sebelumnya"],
-["私<br>watashi", "Pribadi"],
-["上<br>ue", "Di atas, Ke atas"],
-["下<br>shita", "Bawah"],
-["中<br>naka", "Tengah"],
-["大<br>ō", "Besar"],
-["英<br>ei", "Hebat"],
-["会<br>kai", "Rapat"],
-["首<br>kubi", "Leher"],
-["行<br>iku", "Pergi"],
-["来<br>kuru", "Datang"],
-["帰<br>kaeru", "Kembali"],
-["食<br>taberu", "Makan"],
-["飲<br>nomu", "Minum"],
-["見<br>miru", "Lihat"],
-["聞<br>kiku", "Mendengar"],
-["読<br>yomu", "Membaca"],
-["書<br>kaku", "Menulis"],
-["話<br>hanasu", "Cerita"],
-["買<br>kau", "Membeli"],
-["教<br>oshieru", "Mendidik"],
-["小<br>chiisai", "Kecil"],
-["本<br>hon", "Buku"],
-["半<br>han", "Setengah"],
-["分<br>bun", "Bagian"],
-["力<br>chikara", "Kekuasaan"],
-["何<br>nani", "Apa"],
-["目<br>me", "Mata"],
-["耳<br>mimi", "Telinga"],
-["手<br>te", "Tangan"],
-["足<br>ashi", "Kaki"],
-["雨<br>ame", "Hujan"],
-["米<br>kome", "Beras"],
+      ["日<br>nichi", "Matahari"],
+      ["月<br>getsu", "Bulan"],
+      ["木<br>ki", "Pohon"],
+      ["山<br>yama", "Gunung"],
+      ["川<br>kawa", "Sungai"],
+      ["田<br>ta", "Sawah"],
+      ["人<br>hito", "Manusia"],
+      ["口<br>kuchi", "Mulut"],
+      ["車<br>kuruma", "Kendaraan"],
+      ["門<br>mon", "Gerbang"],
+      ["火<br>hi", "Api"],
+      ["水<br>mizu", "Air"],
+      ["室<br>shitsu", "Kamar"],
+      ["家<br>ie", "Rumah"],
+      ["度<br>do", "Derajat"],
+      ["竹<br>take", "Bambu"],
+      ["貝<br>kai", "Kerang"],
+      ["花<br>hana", "Bunga"],
+      ["茶<br>cha", "Teh"],
+      ["肉<br>niku", "Daging"],
+      ["文<br>bun", "Kalimat"],
+      ["字<br>ji", "Huruf"],
+      ["物<br>mono", "Benda"],
+      ["牛<br>ushi", "Sapi"],
+      ["鳥<br>tori", "Burung"],
+      ["魚<br>sakana", "Ikan"],
+      ["明<br>aka", "Terang"],
+      ["休<br>yasumu", "Beristirahat"],
+      ["体<br>karada", "Tubuh"],
+      ["好<br>suki", "Suka"],
+      ["男<br>otoko", "Pria"],
+      ["林<br>hayashi", "Hutan"],
+      ["森<br>mori", "Hutan"],
+      ["朝<br>asa", "Pagi"],
+      ["昼<br>hiru", "Siang"],
+      ["夜<br>yoru", "Malam"],
+      ["晩<br>ban", "Malam"],
+      ["夕<br>yuu", "Malam"],
+      ["方<br>kata", "Arah"],
+      ["午<br>go", "Tengah Hari"],
+      ["前<br>mae", "Di Hadapan"],
+      ["後<br>ato", "Setelah"],
+      ["毎<br>mai", "Setiap"],
+      ["週<br>shuu", "Minggu"],
+      ["曜<br>you", "Hari Kerja"],
+      ["今<br>ima", "Sekarang"],
+      ["年<br>toshi", "Tahun"],
+      ["間<br>aida", "Ruang"],
+      ["一<br>ichi", "Satu"],
+      ["二<br>ni", "Dua"],
+      ["三<br>san", "Tiga"],
+      ["四<br>yon", "Empat"],
+      ["五<br>go", "Lima"],
+      ["六<br>roku", "Enam"],
+      ["七<br>nana", "Tujuh"],
+      ["八<br>hachi", "Delapan"],
+      ["九<br>kyuu", "Sembilan"],
+      ["十<br>juu", "Sepuluh"],
+      ["千<br>sen", "Ribu"],
+      ["万<br>man", "Sepuluh Ribu"],
+      ["百<br>hyaku", "Ratus"],
+      ["円<br>en", "Lingkaran"],
+      ["新<br>atarashii", "Baru"],
+      ["古<br>furui", "Tua"],
+      ["長<br>nagai", "Panjang"],
+      ["短<br>mijikai", "Pendek"],
+      ["高<br>takai", "Tinggi"],
+      ["安<br>yasui", "Aman"],
+      ["低<br>hikui", "Rendah"],
+      ["暗<br>kurai", "Gelap"],
+      ["多<br>ooi", "Banyak"],
+      ["少<br>sukunai", "Sedikit"],
+      ["金<br>kane", "Emas"],
+      ["土<br>tsuchi", "Tanah"],
+      ["子<br>ko", "Anak"],
+      ["女<br>onna", "Wanita"],
+      ["学<br>gaku", "Belajar"],
+      ["生<br>sei", "Hidup"],
+      ["先<br>saki", "Sebelumnya"],
+      ["私<br>watashi", "Pribadi"],
+      ["上<br>ue", "Di atas, Ke atas"],
+      ["下<br>shita", "Bawah"],
+      ["中<br>naka", "Tengah"],
+      ["大<br>ookii", "Besar"],
+      ["英<br>ei", "Hebat"],
+      ["会<br>kai", "Rapat"],
+      ["首<br>kubi", "Leher"],
+      ["行<br>iku", "Pergi"],
+      ["来<br>kuru", "Datang"],
+      ["帰<br>kaeru", "Kembali"],
+      ["食<br>taberu", "Makan"],
+      ["飲<br>nomu", "Minum"],
+      ["見<br>miru", "Lihat"],
+      ["聞<br>kiku", "Mendengar"],
+      ["読<br>yomu", "Membaca"],
+      ["書<br>kaku", "Menulis"],
+      ["話<br>hanasu", "Cerita"],
+      ["買<br>kau", "Membeli"],
+      ["教<br>oshieru", "Mendidik"],
+      ["小<br>chiisai", "Kecil"],
+      ["本<br>hon", "Buku"],
+      ["半<br>han", "Setengah"],
+      ["分<br>bun", "Bagian"],
+      ["力<br>chikara", "Kekuasaan"],
+      ["何<br>nani", "Apa"],
+      ["目<br>me", "Mata"],
+      ["耳<br>mimi", "Telinga"],
+      ["手<br>te", "Tangan"],
+      ["足<br>ashi", "Kaki"],
+      ["雨<br>ame", "Hujan"],
+      ["米<br>kome", "Beras"],
     ];
 
     let questions = [];
@@ -290,7 +195,7 @@
       }
 
       const [romaji, correct] = questions[current];
-      document.getElementById("question").textContent = romaji;
+      document.getElementById("question").innerHTML = romaji; // ✅ ubah dari textContent ke innerHTML
       document.getElementById("result").textContent = "";
 
       const options = new Set([correct]);
