--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       <button onclick="location.href='n5kosakata'">📒 Kosakata N5</button>
       <button onclick="location.href='conversation'">🗒️ Percakapan Jepang</button>
       <button onclick="location.href='tkajepang.html'">🇯🇵 Kuis TKA Jepang</button>
+      <button onclick="location.href='xpresstka.html'">📘 Kosakata Xpress</button>
     </div>
   </div>
 
