--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <button onclick="goTo('kanji')">🈶 Kosakata Kanji</button>
       <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
       <button onclick="location.href='n5kosakata'">📒 Kosakata N5</button>
-      <button onclick="location.href='conversation'">🗒️ Percakapan Jepang</button>
+      <button onclick="location.href='conversation'">🗒️ Minna no Nihonggo</button>
       <button onclick="location.href='tkajepang.html'">🇯🇵 Kuis TKA Jepang</button>
       <button onclick="location.href='xpresstka.html'">📘 Kosakata Xpress</button>
     </div>
