--- a/xpresstka.html
+++ b/xpresstka.html
@@ -61,38 +61,38 @@
   </div>
   <script>
     const data = [
-      ["日", "nichi"],
-["月", "gatsu"],
-["木", "moku"],
-["山", "yama"],
-["川", "kawa"],
-["田", "ta"],
-["人", "jin"],
-["口", "kuchi"],
-["車", "sha"],
-["門", "mon"],
-["火", "ka"],
-["水", "sui"],
-      ["室", "shitsu"],
-["家", "ka"],
-["度", "do"],
-["竹", "take"],
-["貝", "kai"],
-["花", "hana"],
-["茶", "cha"],
-["肉", "niku"],
-["文", "bun"],
-["字", "ji"],
-      ["物", "mono"],
-["牛", "gyuu"],
-["鳥", "tori"],
-["魚", "sakana"],
-["明", "mei"],
-["休", "kyuu"],
-["体", "tai"],
-["好", "suki"],
-["男", "otoko"],
-["林", "hayashi"],
+      ["あさごはん", "sarapan"],
+["あける", "membuka"],
+["あそぶ", "bermain"],
+["あに", "kakak laki laki"],
+["アニメ", "anime"],
+["あびます", "mandi"],
+["あね", "kakak perempuan"],
+["あらいます", "mencuci(muka/tangan)"],
+["あるく", "berjalan"],
+["いう", "mengatakan"],
+["いきます", "pergi"],
+["いちねんせい", "siswa kelas 1"],
+      ["いしゅうかん", "satu minggu"],
+["いぬ", "anjing"],
+["いもうと", "adik perempuan"],
+["うさぎ", "kelinci"],
+["うたう", "menyanyi"],
+["うみ", "laut"],
+["え", "gambar"],
+["えいがかん", "bioskop"],
+["えいご", "bahasa inggris"],
+["えんぴつ", "pensil"],
+      ["おいのりします", "berdoa"],
+["おきます", "bangun"],
+["おくる", "mengirim"],
+["おかあさん", "ibu"],
+["おしゃべります", "mengobrol"],
+["おしえる", "mengajar/memberi tau"],
+["おちる", "jatuh"],
+["おとうと", "adik laki laki"],
+["おどる", "menari"],
+["おにぎり", "nasi kepal"],
     ];
 
     let questions = [];
