--- a/kotoba.html
+++ b/kotoba.html
@@ -287,6 +287,13 @@
       ["きょねん", "tahun lalu"],
       ["ことし", "tahun ini"],
       ["らいねん", "tahun depan"],
+      ["ーがつ", "bulanー"],
+      ["なんがつ", "bulan berapa"],
+      ["ついたち", "tanggal 1"],
+      ["ふつか", "tanggal 2,dua hari"],
+      ["みっか", "tanggal 3,tiga hari"],
+      ["よっか", "tanggal 4,empat hari"],
+      ["いつか", "tanggal 5,lima hari"],
     ];
 
     let questions = [];
