--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -156,6 +156,18 @@
       ["おいしい", "lezat"],
       ["おおい", "banyak"],
       ["おおきい", "besar"],
+      ["おおきな", "yg besar"],
+      ["おおぜい", "sejumlah besar orang"],
+      ["おかあさん", "ibu"],
+      ["おかし", "permen"],
+      ["あかね", "uang"],
+      ["おきる", "bangun"],
+      ["おく", "menaruh"],
+      ["おくさん", "istri"],
+      ["おさけ", "sake"],
+      ["おさら", "piring,hidangan"],
+      ["おじいさん", "kakek"],
+      ["おしえる", "mengajar,memberitau"],
     ];
 
     let questions = [];
