--- a/xpresstka.html
+++ b/xpresstka.html
@@ -93,6 +93,17 @@
 ["おとうと", "adik laki laki"],
 ["おどる", "menari"],
 ["おにぎり", "nasi kepal"],
+      ["おもちゃ", "mainan"],
+      ["およぐ", "berenang"],
+      ["おりる", "turun(kendaraan)"],
+      ["かいしゃいん", "karyawan perusahaan"],
+      ["がいこくご", "bahasa asing"],
+      ["かいます", "membeli"],
+      ["かく", "menulis"],
+      ["がっこう", "sekolah"],
+      ["かける", "memakai(kacamata)"],
+      ["かぶる", "memakai(topi)"],
+      ["カップ", "cangkir"],
     ];
 
     let questions = [];
