--- a/tkajepang.html
+++ b/tkajepang.html
@@ -235,7 +235,29 @@
   ["これ", "ini"],
   ["それ", "itu"],
   ["あれ", "itu (jauh)"],
-  ["どれ", "yang mana"]
+  ["どれ", "yang mana"],
+  ["おはようございます", "selamat pagi"],
+  ["こんにちは", "selamat siang"],
+  ["こんばんは", "selamat malam"],
+  ["おやすみなさい", "selamat tidur"],
+  ["さようなら", "selamat tinggal"],
+  ["またね", "sampai jumpa"],
+  ["じゃあね", "sampai nanti"],
+  ["では、また", "kalau begitu, sampai jumpa"],
+  ["ありがとうございます", "terima kasih"],
+  ["どういたしまして", "sama-sama"],
+  ["すみません", "permisi / maaf"],
+  ["ごめんなさい", "maaf (mohon maaf)"],
+  ["はじめまして", "salam kenal"],
+  ["よろしくおねがいします", "mohon kerja samanya / senang berkenalan"],
+  ["おげんきですか", "apa kabar?"],
+  ["はい、げんきです", "ya, saya baik"],
+  ["いってきます", "saya pergi dulu"],
+  ["いってらっしゃい", "hati-hati di jalan"],
+  ["ただいま", "saya pulang"],
+  ["おかえりなさい", "selamat datang kembali"],
+  ["いただきます", "selamat makan (sebelum makan)"],
+  ["ごちそうさまでした", "terima kasih atas makanannya"],
     ];
 
     let questions = [];
