--- a/kotoba.html
+++ b/kotoba.html
@@ -261,7 +261,7 @@
       ["いきます", "pergi"],
       ["きます", "datang"],
       ["かえります", "pulang,kembali"],
-      ["かっこう", "sekolah"],
+      ["がっこう", "sekolah"],
       ["スーパー", "pasar swalayan"],
       ["えき", "stasiun"],
       ["ひこうき", "pesawat"],
