--- a/xpresstka.html
+++ b/xpresstka.html
@@ -104,6 +104,24 @@
       ["かける", "memakai(kacamata)"],
       ["かぶる", "memakai(topi)"],
       ["カップ", "cangkir"],
+      ["カレンダ", "kalender"],
+      ["カんじ", "kanji"],
+      ["ガムラン", "gamelan"],
+      ["き", "pohon"],
+      ["きく", "mendengar"],
+      ["ギター", "gitar"],
+      ["キッチン", "dapur"],
+      ["きる", "memakai(baju)"],
+      ["くがつ", "bulan september"],
+      ["くつ", "sepatu"],
+      ["くるま", "mobil"],
+      ["けいたいでんわ", "telepon genggam"],
+      ["ケーキ", "kue"],
+      ["げいじゅつ", "seni"],
+      ["ゲーム", "game"],
+      ["こころ", "hati"],
+      ["ごがつ", "bulan mei"],
+      ["こうちょうしつ", "ruang kepala sekolah"],
     ];
 
     let questions = [];
