--- a/kosakata.html
+++ b/kosakata.html
@@ -136,7 +136,9 @@
       ["kuwashii", "detail"],["muzukashii", "sulit"],["yasashii", "mudah"],["mezurashii", "langka"],["okashii", "aneh,lucu"],["abunai", "berbahaya"],["umai", "enak,pandai"],["ii", "bagus"],["warui", "jelek"],
       ["hidoi", "kejam"],["urusai", "berisik"],["isogashii", "sibuk"],["tadashii", "benar"],["sugoi", "hebat"],["subarashii", "luar biasa"],["kakkoi", "keren,terlihat bagus"],["erai", "pintar,hebat,bagus"],
       ["shitashii", "akrab"],["yasashii", "baik hati,ramah"],["kawaii", "cantik,lucu,imut"],["utsukushii", "indah"],["otonashii", "bersifat lemah lembut dan tidak keras"],["tanoshii", "menyenangkan"],
-      ["omoshiroi", "menarik,lucu"],["hidoi", "kejam"],
+      ["omoshiroi", "menarik,lucu"],["tsumaranai", "membosankan,tidak menarik"],["ureshii", "senang,gembira"],["sabishii", "merasa sepi"],["kowai", "takut"],["kanashii", "sedih"],["hazukashii", "malu"],
+      ["urayamashii", "iri hati"],["natsukashii", "terkenang,melepas rindu"],["itai", "merasa nyeri,sakit"],["hoshii", "ingin mendapatkan"],["nai", "tidak ada"],["zannen", "menyayangkan"],
+      ["shinpai", "khawatir"],
     ];
      let questions = [], current = 0, score = 0;
     function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
