--- a/kotoba.html
+++ b/kotoba.html
@@ -290,10 +290,17 @@
       ["ーがつ", "bulanー"],
       ["なんがつ", "bulan berapa"],
       ["ついたち", "tanggal 1"],
-      ["ふつか", "tanggal 2,dua hari"],
-      ["みっか", "tanggal 3,tiga hari"],
-      ["よっか", "tanggal 4,empat hari"],
-      ["いつか", "tanggal 5,lima hari"],
+      ["ふつか", "tanggal 2,/hari"],
+      ["みっか", "tanggal 3,/hari"],
+      ["よっか", "tanggal 4,/hari"],
+      ["いつか", "tanggal 5,/hari"],
+      ["むいか", "tanggal 6,/hari"],
+      ["なのか", "tanggal 7,/hari"],
+      ["ようか", "tanggal 8,/hari"],
+      ["ここのか", "tanggal 9,/hari"],
+      ["とおか", "tanggal 10,/hari"],
+      ["じゅうよっか", "tanggal 14,/hari"],
+      ["はつか", "tanggal 24,/20 hari"],
     ];
 
     let questions = [];
