--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -168,6 +168,26 @@
       ["おさら", "piring,hidangan"],
       ["おじいさん", "kakek"],
       ["おしえる", "mengajar,memberitau"],
+      ["おじさん", "paman,om"],
+      ["おす", "mendorong,memecat"],
+      ["おそい", "terlambat,lambat"],
+      ["おちゃ", "teh"],
+      ["おてあらい", "kamar mandi"],
+      ["おとうさん", "ayah"],
+      ["おとうと", "adik(laki-laki)"],
+      ["おとこ", "laki-laki,pria"],
+      ["おとこのこ", "anak laki-laki"],
+      ["おととい", "2 hari yg lalu"],
+      ["おととし", "2 tahun yg lalu"],
+      ["おとな", "dewasa"],
+      ["おなか", "perut"],
+      ["おなじ", "sama"],
+      ["おにいさん", "kakak(laki-laki)"],
+      ["おねえさん", "kakak(perempuan)"],
+      ["おばあさん", "nenek"],
+      ["おばさん", "bibi,tante"],
+      ["おふろ", "mandi"],
+      ["おべんとう", "kotak makan siang"],
     ];
 
     let questions = [];
