--- a/xpresstka.html
+++ b/xpresstka.html
@@ -122,6 +122,18 @@
       ["こころ", "hati"],
       ["ごがつ", "bulan mei"],
       ["こうちょうしつ", "ruang kepala sekolah"],
+      ["サッカー", "sepak bola"],
+      ["さら", "piring"],
+      ["さんがい", "lantai 3"],
+      ["さんねんせい", "siswa kelas 3"],
+      ["しごと", "pekerjaan"],
+      ["しちがつ", "bulan juli"],
+      ["しめる", "menutup"],
+      ["シゃツ", "kemeja"],
+      ["しゅみ", "hobi"],
+      ["しょくいんしつ", "ruang guru"],
+      ["しょうがくせい", "siswa SD"],
+      ["しんぶん", "koran"],
     ];
 
     let questions = [];
