--- a/xpresstka.html
+++ b/xpresstka.html
@@ -134,6 +134,28 @@
       ["しょくいんしつ", "ruang guru"],
       ["しょうがくせい", "siswa SD"],
       ["しんぶん", "koran"],
+      ["じしょ", "kamus"],
+      ["じどうはんばいき", "mesin penjual otomatis"],
+      ["じむしつ", "kantor"],
+      ["ジャケット", "jaket"],
+      ["ジュース", "jus"],
+      ["すうがく", "matematika"],
+      ["する", "melakukan/memakai(dasi,jam)"],
+      ["すわる", "duduk"],
+      ["スラバヤ", "surabaya"],
+      ["せんせい", "guru"],
+      ["せんぷうき", "kipas angin"],
+      ["そうじします", "membersihkan"],
+      ["そぼ", "nenek"],
+      ["たたく", "memukul(drum)"],
+      ["たつ", "berdiri"],
+      ["たな", "rak"],
+      ["たまご", "telur"],
+      ["たんじょうび", "ulang tahun"],
+      ["たべます", "makan"],
+      ["たべましょう", "ayo makan"],
+      ["たべもの", "makanan"],
+      ["ダンス", "dansa"],
     ];
 
     let questions = [];
