--- a/xpresstka.html
+++ b/xpresstka.html
@@ -156,6 +156,17 @@
       ["たべましょう", "ayo makan"],
       ["たべもの", "makanan"],
       ["ダンス", "dansa"],
+      ["ちち", "ayah"],
+      ["ちゅうごくご", "bahasa mandarin"],
+      ["つかう", "menggunakan"],
+      ["つく", "tiba"],
+      ["つくる", "membuat"],
+      ["つかれる", "lelah"],
+      ["つり", "memancing"],
+      ["テニス", "tenis"],
+      ["でる", "keluar"],
+      ["でんわばんごう", "nomor telepon"],
+      ["てんいん", "pelayan toko"],
     ];
 
     let questions = [];
