--- a/xpresstka.html
+++ b/xpresstka.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Kun/On Kanji</title>
+  <title>Kuis TKA</title>
   <style>
     body {
       font-family: sans-serif;
