--- a/xpresstka.html
+++ b/xpresstka.html
@@ -167,6 +167,21 @@
       ["でる", "keluar"],
       ["でんわばんごう", "nomor telepon"],
       ["てんいん", "pelayan toko"],
+      ["どいつご", "bahasa jerman"],
+      ["とけい", "jam"],
+      ["とだな", "lemari"],
+      ["とまる", "berhenti"],
+      ["とる", "mengambil"],
+      ["としょしつ", "perpustakaan"],
+      ["ドラマ", "drum"],
+      ["ならう", "belajar(dari guru)"],
+      ["なんかい", "berapa kali"],
+      ["にねんせい", "siswa kelas 2"],
+      ["にほんご", "bahasa jepang"],
+      ["にわ", "taman"],
+      ["にんぎょう", "boneka"],
+      ["ねこ", "kucing"],
+      ["ねます", "tidur"],
     ];
 
     let questions = [];
