--- a/xpresstka.html
+++ b/xpresstka.html
@@ -182,6 +182,28 @@
       ["にんぎょう", "boneka"],
       ["ねこ", "kucing"],
       ["ねます", "tidur"],
+      ["のぼる", "mendaki"],
+      ["のむ", "minum"],
+      ["のる", "naik(kendaraan)"],
+      ["ノート", "buku catatan"],
+      ["はいる", "masuk"],
+      ["はく", "memakai(celana,rok,sepatu)"],
+      ["はしる", "berlari"],
+      ["はちがつ", "agustus"],
+      ["はたらく", "bekerja"],
+      ["はなします", "berbicara"],
+      ["はは", "ibu"],
+      ["バドミントン", "badminton"],
+      ["バスケットボール", "bola basket"],
+      ["ばんごはん", "makan malam"],
+      ["ひく", "memainkan(alat musik petik)"],
+      ["ひこうき", "pesawat terbang"],
+      ["ひらがな", "hiragana"],
+      ["ピアノ", "piano"],
+      ["ふえ", "seruling"],
+      ["べッド", "tempat tidur"],
+      ["ぺッと", "hewan peliharaan"],
+      ["べんきょうします", "belajar"],
     ];
 
     let questions = [];
