--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -78,6 +78,203 @@
       ["あした", "besok"],
       ["あそこ", "disana"],
       ["あそぶ", "bermain"],
+      ["おはようございます", "selamat pagi"],
+  ["こんにちは", "selamat siang"],
+  ["こんばんは", "selamat malam"],
+  ["おやすみなさい", "selamat tidur"],
+  ["さようなら", "selamat tinggal"],
+  ["はじめまして", "salam kenal"],
+  ["よろしくおねがいします", "mohon kerja samanya"],
+  ["ありがとう", "terima kasih"],
+  ["ありがとうございます", "terima kasih (formal)"],
+  ["すみません", "permisi / maaf"],
+  ["ごめんなさい", "maaf"],
+  ["はい", "ya"],
+  ["いいえ", "tidak"],
+  ["おねがいします", "tolong"],
+  ["どういたしまして", "sama-sama"],
+
+  ["わたし", "saya"],
+  ["あなた", "kamu"],
+  ["かれ", "dia (laki-laki)"],
+  ["かのじょ", "dia (perempuan)"],
+  ["ともだち", "teman"],
+  ["せんせい", "guru"],
+  ["がくせい", "murid / mahasiswa"],
+  ["ちち", "ayah"],
+  ["はは", "ibu"],
+  ["あに", "kakak laki-laki"],
+  ["あね", "kakak perempuan"],
+  ["おとうと", "adik laki-laki"],
+  ["いもうと", "adik perempuan"],
+  ["おじいさん", "kakek"],
+  ["おばあさん", "nenek"],
+
+  ["いち", "satu"],
+  ["に", "dua"],
+  ["さん", "tiga"],
+  ["よん", "empat"],
+  ["ご", "lima"],
+  ["ろく", "enam"],
+  ["なな", "tujuh"],
+  ["はち", "delapan"],
+  ["きゅう", "sembilan"],
+  ["じゅう", "sepuluh"],
+  ["ひゃく", "seratus"],
+  ["せん", "seribu"],
+  ["まん", "sepuluh ribu"],
+  ["いま", "sekarang"],
+  ["きょう", "hari ini"],
+  ["あした", "besok"],
+  ["きのう", "kemarin"],
+  ["あさ", "pagi"],
+  ["ひる", "siang"],
+  ["よる", "malam"],
+  ["しゅうまつ", "akhir pekan"],
+  ["じ", "jam"],
+  ["ふん", "menit"],
+  ["とき", "waktu"],
+  ["なんじ", "jam berapa"],
+
+  ["がっこう", "sekolah"],
+  ["だいがく", "universitas"],
+  ["いえ", "rumah"],
+  ["へや", "kamar"],
+  ["としょかん", "perpustakaan"],
+  ["えき", "stasiun"],
+  ["みせ", "toko"],
+  ["ぎんこう", "bank"],
+  ["びょういん", "rumah sakit"],
+  ["レストラン", "restoran"],
+  ["コンビニ", "minimarket"],
+  ["こうえん", "taman"],
+  ["まち", "kota"],
+  ["くに", "negara"],
+  ["みち", "jalan"],
+
+  ["ほん", "buku"],
+  ["ざっし", "majalah"],
+  ["しんぶん", "koran"],
+  ["ノート", "buku catatan"],
+  ["えんぴつ", "pensil"],
+  ["ペン", "pulpen"],
+  ["スマホ", "HP"],
+  ["コンピューター", "komputer"],
+  ["つくえ", "meja"],
+  ["いす", "kursi"],
+  ["くるま", "mobil"],
+  ["じてんしゃ", "sepeda"],
+  ["でんしゃ", "kereta"],
+  ["ひこうき", "pesawat"],
+  ["ふね", "kapal"],
+  ["かばん", "tas"],
+  ["くつ", "sepatu"],
+  ["シャツ", "kemeja"],
+  ["ズボン", "celana"],
+  ["ドア", "pintu"],
+  ["まど", "jendela"],
+
+  ["ごはん", "nasi / makan"],
+  ["パン", "roti"],
+  ["にく", "daging"],
+  ["さかな", "ikan"],
+  ["やさい", "sayur"],
+  ["くだもの", "buah"],
+  ["りんご", "apel"],
+  ["バナナ", "pisang"],
+  ["みかん", "jeruk"],
+  ["みず", "air"],
+  ["おちゃ", "teh"],
+  ["こうちゃ", "teh hitam"],
+  ["コーヒー", "kopi"],
+  ["ジュース", "jus"],
+  ["ぎゅうにゅう", "susu"],
+
+  ["いきます", "pergi"],
+  ["きます", "datang"],
+  ["かえります", "pulang"],
+  ["たべます", "makan"],
+  ["のみます", "minum"],
+  ["みます", "melihat"],
+  ["ききます", "mendengar / bertanya"],
+  ["よみます", "membaca"],
+  ["かきます", "menulis"],
+  ["べんきょうします", "belajar"],
+  ["はなします", "berbicara"],
+  ["あいます", "bertemu"],
+  ["ねます", "tidur"],
+  ["おきます", "bangun"],
+  ["かいます", "membeli"],
+  ["つかいます", "menggunakan"],
+  ["あります", "ada (benda)"],
+  ["います", "ada (orang/hewan)"],
+  ["します", "melakukan"],
+
+  ["いい", "baik"],
+  ["わるい", "buruk"],
+  ["おおきい", "besar"],
+  ["ちいさい", "kecil"],
+  ["たかい", "tinggi / mahal"],
+  ["やすい", "murah"],
+  ["あたらしい", "baru"],
+  ["ふるい", "lama / tua (benda)"],
+  ["いそがしい", "sibuk"],
+  ["ひま", "senggang"],
+  ["たのしい", "menyenangkan"],
+  ["おいしい", "enak"],
+  ["あつい", "panas"],
+  ["さむい", "dingin"],
+  ["あかい", "merah"],
+  ["あおい", "biru"],
+  ["しろい", "putih"],
+  ["くろい", "hitam"],
+
+  ["なに", "apa"],
+  ["どこ", "di mana"],
+  ["だれ", "siapa"],
+  ["いつ", "kapan"],
+  ["なんじ", "jam berapa"],
+  ["なんにち", "tanggal berapa"],
+  ["いくつ", "berapa (jumlah)"],
+  ["なんさい", "umur berapa"],
+  ["どうして", "kenapa"],
+  ["どう", "bagaimana"],
+
+  ["とても", "sangat"],
+  ["すこし", "sedikit"],
+  ["たくさん", "banyak"],
+  ["そして", "lalu / kemudian"],
+  ["でも", "tetapi"],
+  ["から", "karena / dari"],
+  ["まで", "sampai"],
+  ["と", "dan / dengan"],
+  ["もしもし", "halo (telepon)"],
+  ["これ", "ini"],
+  ["それ", "itu"],
+  ["あれ", "itu (jauh)"],
+  ["どれ", "yang mana"],
+  ["おはようございます", "selamat pagi"],
+  ["こんにちは", "selamat siang"],
+  ["こんばんは", "selamat malam"],
+  ["おやすみなさい", "selamat tidur"],
+  ["さようなら", "selamat tinggal"],
+  ["またね", "sampai jumpa"],
+  ["じゃあね", "sampai nanti"],
+  ["では、また", "kalau begitu, sampai jumpa"],
+  ["ありがとうございます", "terima kasih"],
+  ["どういたしまして", "sama-sama"],
+  ["すみません", "permisi / maaf"],
+  ["ごめんなさい", "maaf (mohon maaf)"],
+  ["はじめまして", "salam kenal"],
+  ["よろしくおねがいします", "mohon kerja samanya / senang berkenalan"],
+  ["おげんきですか", "apa kabar?"],
+  ["はい、げんきです", "ya, saya baik"],
+  ["いってきます", "saya pergi dulu"],
+  ["いってらっしゃい", "hati-hati di jalan"],
+  ["ただいま", "saya pulang"],
+  ["おかえりなさい", "selamat datang kembali"],
+  ["いただきます", "selamat makan (sebelum makan)"],
+  ["ごちそうさまでした", "terima kasih atas makanannya"],
       ["あたたかい", "hangat"],
       ["あたま", "kepala"],
       ["あたらし", "baru"],
