--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     <h1>Website Quiz Bahasa Jepang</h1>
     <p>Pilih salah satu kuis di bawah ini:</p>
     <div class="menu">
-      <button onclick="goTo('kuis')">📝 Kuis Hirakana 1</button>
-      <button onclick="location.href='kuizz.html'">🗒️ Kuis Hirakana 2</button>
+      <button onclick="location.href='menuhuruf.html'">🗒️ Huruf Jepang</button>
       <button onclick="location.href='artikanji.html'">📒 Kuis Arti Kanji</button>
       <button onclick="goTo('kosakata')">📚 Kuis Kosakata</button>
       <button onclick="location.href='kotoba.html'">📔 Kotoba Minna</button>
